# comp2811-UI

./: .gitmodules  CMakeLists.txt  COMP2811_CW3_Requirements.md  README.md  compliance.cpp  compliance.hpp  dashboard.cpp  dashboard.hpp  envlitter.cpp  envlitter.hpp  fluorinated.cpp  fluorinated.hpp  main.cpp  pollutantOverview.cpp  pollutantOverview.hpp  pops.cpp  pops.hpp  window.cpp  window.hpp
Ethics Documentation/: Consent form_UKGDPR General v1.docx  Evaluation Feedback Document.docx  PIS_GDPR UoL V1.docx
Saved Settings/: sultan.md
solution/: CMakeLists.txt  compliance.cpp  compliance.hpp  dashboard.cpp  dashboard.hpp  envlitter.cpp  envlitter.hpp  fluorinated.cpp  fluorinated.hpp  main.cpp  pollutantOverview.cpp  pollutantOverview.hpp  pops.cpp  pops.hpp  window.cpp  window.hpp
solution/translations/: en.qm  fr.qm
translations/: en.ts  fr.ts
